[project]
authors = [
  {name = "Robin Rombach", email = "email@email.eu"},
  {name = "Patrick von Platen", email = "email@email.eu"},
  {name = "Andreas Blattmann", email = "email@email.eu"},
  {name = "Patrick Esser", email = "email@email.eu"},
  {name = "Cheng Lu", email = "email@email.eu"},
  {name = "Patrick von Platen", email = "email@email.eu"},
]

dependencies = [
  # "torch>=2.0.0", it is not playing nice with pip
  # pip3 install --pre torch torchvision pytorch_lightning --extra-index-url https://download.pytorch.org/whl/nightly/cpu
  "numpy==1.24.2",
  "tqdm==4.64.1",
  "omegaconf==2.3.0",
]

description = "A latent text-to-image diffusion model"
keywords = ["ai", "data"]
license = {file = "LICENSE"}
name = "stable-diffusion"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.1"

[project.urls]
Documentation = "https://ommer-lab.com/research/latent-diffusion-models/"
Source = "https://github.com/CompVis/stable-diffusion"
