[metadata]
name = k-diffusion
version = 0.0.1
author = Katherine Crowson
author_email = crowsonkb@gmail.com
url = https://github.com/crowsonkb/k-diffusion
description = Karras et al. (2022) diffusion models for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires = 
    accelerate
    clean-fid
    einops
    jsonmerge
    kornia
    Pillow
    resize-right
    scikit-image
    scipy
    torch
    torchdiffeq
    torchvision
    tqdm
    wandb
    CLIP @ git+https://github.com/openai/CLIP
